--- a/recipes/green-onion-cake.html
+++ b/recipes/green-onion-cake.html
@@ -9,5 +9,43 @@
   <body>
     <h1>Green Onion Cake</h1>
     <a href="../index.html">Home</a>
+    <br>
+    <img src="../img/green-onion-cake.jpg" alt="Green Onion Cake IMG">
+    <p>Green onion cake is a savory Chinese flatbread made from dough layered with finely chopped green onions (scallions), oil, and salt, then pan-fried until golden and crispy on the outside while remaining chewy and tender inside. It's a popular street food in many parts of Asia and has become a beloved snack or appetizer in places like Edmonton, where it's often served with soy sauce or chili dipping sauce.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+      <li>
+        3 Cups All-purpose flour
+      </li>
+      <li>
+        Salt to taste
+      </li>
+      <li>
+        Baking Powder
+      </li>
+      <li>
+        1 1/2 Cups Hot Water
+      </li>
+      <li>
+        2 tablespoons Sesame Oil
+      </li>
+      <li>
+        1 Bunch Chopped green onions
+      </li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Use a fork to mix flour and boiling water in a large bowl. Knead dough into a ball. Cover bowl with plastic wrap; let dough rest for 30 to 60 minutes.
+      </li>
+      <li>
+        Evenly divide dough into 16 pieces. Roll each piece into a 1/4 inch thick circle. Brush each circle with oil, season with salt and pepper, and sprinkle with about 1 teaspoon of green onions. Roll up, cigar style; coil each pancake and pinch open ends together to form a disc. Roll each circle flat to about 1/4 inch thickness.
+      </li>
+      <li>
+        Heat 2 teaspoons oil in a large skillet. Fry cakes until golden brown, about 2 minutes on each side. Add more oil between batches, if necessary.
+      </li>
+    </ol>
   </body>
 </html>
