Add More Recipes and connect them to index.html

--- a/recipes/green-onion-cake.html
+++ b/recipes/green-onion-cake.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Green Onion Recipe</title>
   </head>
 
   <body>
     <h1>Green Onion Cake</h1>
     <a href="../index.html">Home</a>
     <br>
-    <img src="../img/green-onion-cake.jpg" alt="Green Onion Cake IMG">
+    <img src="../img/green-onion-cake.jpg" alt="Green Onion Cake IMG" width="300" height="300">
+
     <p>Green onion cake is a savory Chinese flatbread made from dough layered with finely chopped green onions (scallions), oil, and salt, then pan-fried until golden and crispy on the outside while remaining chewy and tender inside. It's a popular street food in many parts of Asia and has become a beloved snack or appetizer in places like Edmonton, where it's often served with soy sauce or chili dipping sauce.</p>
 
     <h2>Ingredients</h2>
