--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/green-onion-cake.html">Green Onion Cake</a>
+
+    <ul>
+      <li><a href="recipes/green-onion-cake.html">Green Onion Cake</a></li>
+      <li><a href="recipes/halo-halo.html">Halo Halo</a></li>
+      <li><a href="recipes/avocado-toast.html">Avocado Toast</a></li>
+    </ul>
+
+    
   </body>
 </html>
